Add response for post, patch and delete requests. Refactor getting page for drivers and passengers